Replace old mongo driver by asynch one

--- a/.classpath
+++ b/.classpath
@@ -6,8 +6,10 @@
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="lib/mongo-java-driver-2.9.3.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/mongodb-driver-async-3.0.4.jar" sourcepath="lib/mongodb-driver-async-3.0.4-sources.jar"/>
+	<classpathentry kind="lib" path="lib/mongodb-driver-core-3.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/bson-3.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
