--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,8 @@
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.5.jar"/>
 	<classpathentry kind="lib" path="lib/mongodb-driver-async-3.0.4.jar" sourcepath="lib/mongodb-driver-async-3.0.4-sources.jar"/>
 	<classpathentry kind="lib" path="lib/mongodb-driver-core-3.0.4.jar"/>
-	<classpathentry kind="lib" path="lib/bson-3.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/bson-3.0.4.jar" sourcepath="lib/bson-3.0.4-sources.jar"/>
+	<classpathentry kind="lib" path="C:/_dev/_src/tools/lib/mongodb-driver-core-3.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/mongodb-driver-3.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
